temporary ugly fixxing

--- a/lib/libft/Makefile
+++ b/lib/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: Jskehan <jskehan@student.42Berlin.de>      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/05/28 17:01:09 by Jskehan           #+#    #+#              #
-#    Updated: 2024/08/14 10:33:25 by Jskehan          ###   ########.fr        #
+#    Updated: 2024/08/14 11:02:55 by Jskehan          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -34,7 +34,7 @@ SRC_EXTRA_DIR = src_extra/
 SRCS_EXTRA = ft_1st_char_in_set_i.c ft_2d_array_len.c ft_add_row_2d_array.c ft_count_char.c ft_duplicate_2d_array.c \
 			 ft_free_2d_array.c ft_is_space.c ft_print_2d_array_fd.c ft_splice_2d_array.c ft_strchr_i.c ft_realloc_2d_array.c \
 			 ft_add_row_2d_array_i.c ft_strjoin_free.c ft_is_only_special.c ft_is_special_symbol.c ft_strcmp.c ft_quote_string.c \
-			 ft_isstr_digit.c
+			 ft_isstr_digit.c ft_remove_paired_quotes.c 
 
 # Include Directory
 INC = -I./includes
